2006-01-18  Gary Thomas  <gary@mlbassoc.com>

	* src/net/eth_drv.c (eth_drv_send): Better check for overflow
	of SG list - pointed out by Ferenc Deak

2005-07-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/net/eth_drv.c (eth_drv_recv): Change of type to remove
	compiler warning.

2005-06-29  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/driver_doc: Removed, it has been superseded by the sgml
	documentation.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/net/eth_drv.c (eth_drv_send): Fixed a compiler warning about
	type of parameter passed to diag_printf.

2004-08-06  Jani Monoses <jani@iv.ro>

	* src/stand_alone/eth_drv.c: Add parantheses to fix operator
	precedence bugs even though they were harmless in practice.

2004-01-09  Jani Monoses <jani@iv.ro>

	* include/eth_drv.h:
	* src/lwip/eth_drv.c: Update to support more than one device and
	be in sync with current lwip code.
	
2004-01-05  Gary Thomas  <gary@mlbassoc.com>

	* src/net/eth_drv.c: Names of FLASH config types changed.

2003-10-09  Gary Thomas  <gary@mlbassoc.com>

	* src/stand_alone/eth_drv.c: Obviate __local_enet_addr, since this
	same information is already kept in the driver structure *__local_enet_sc

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/stand_alone/eth_drv.c: 
	* src/net/eth_drv.c: Improve network speeds by reducing some
	overhead and also the delay when sending a packet.

2003-07-23  Nick Garnett  <nickg@balti.calivar.com>

	* include/eth_drv.h:
	* src/net/eth_drv.c:
	Added an ifndef to fix warnings about NBPFILTER not being
	defined. 

2003-03-20  Mark Salter  <msalter@redhat.com>

	* cdl/eth_drivers.cdl (CYGHWR_NET_DRIVERS): Moved here from net/common.

2003-03-14  Nick Garnett  <nickg@calivar.com>

	* src/net/eth_drv.c: Added calls to cyg_net_show_mbufs() whenever
	we see an out-of-mbufs problem.

2003-03-11  Mark Salter  <msalter@redhat.com>

	* src/stand_alone/eth_drv.c (eth_drv_stop): Uncomment, make non-static,
	and use __local_enet_sc.